Fixed some small layout bugs

--- a/css/about.css
+++ b/css/about.css
@@ -4,7 +4,14 @@
   text-align: center;
 }
 
+.about-description-section {
+  padding: 40px 32px;
+  text-align: center;
+  background: #eee;
+}
+
 .our-team {
+  padding-top: 50px;
   padding-bottom: 100px;
 }
 
